--- a/terminal/nbproject/project.properties
+++ b/terminal/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.jar=${dist.dir}/terminal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jSerialComm-2.8.1.jar=jSerialComm-2.8.1.jar
 file.reference.RXTXcomm.jar=RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.jSerialComm-2.8.1.jar}:\
     ${file.reference.RXTXcomm.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
